--- a/menu.html
+++ b/menu.html
@@ -1,21 +1,22 @@
 <style>
   nav {
-    background-color: var(--G-brand-bg-color);
-    font-family: var(--G-brand-font-family);
-    font-size: var(--G-p1-font-size);
-    color: var(--G-brand-color);
+    background-color: #ecfaff; /* Light background */
+    font-family: 'Inter', sans-serif; /* MailerLite default font */
+    font-size: 16px;
+    color: #1C3144; /* Dark text */
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 20px;
     flex-wrap: wrap;
+    border-bottom: 1px solid #1C3144;
   }
 
   nav a {
-    color: var(--G-brand-color);
+    color: #1C3144;
     text-decoration: none;
     margin: 0 15px;
-    font-weight: bold;
+    font-weight: 600;
   }
 
   nav a:hover {
@@ -48,6 +49,7 @@
     }
   }
 </style>
+
 <nav style="background-color: #040016; padding: 10px 20px; display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap;">
   <a href="https://balticsummit.pl/">
     <img src="https://storage.mlcdn.com/account_image/518224/LFKG7Y7KgPGPDUeZt9PFwlcplOkIxArUGstK30Di.png" alt="Baltic Summit logo" style="height: 50px;" />
