--- a/menu.html
+++ b/menu.html
@@ -4,13 +4,9 @@
   </a>
   <ul class="menu-links">
     <li><a href="https://balticsummit.pl/about2025">About</a></li>
-    <li>|</li>
     <li><a href="https://balticsummit.pl/speakers2025">Speakers</a></li>
-    <li>|</li>
     <li><a href="https://balticsummit.pl/sessions2025">Workshops & Sessions</a></li>
-    <li>|</li>
     <li><a href="https://balticsummit.pl/sponsors2025">Sponsors & Partners</a></li>
-    <li>|</li>
     <li><a href="https://balticsummit.pl/volunteers2025">Volunteers</a></li>
   </ul>
 </nav>
@@ -37,15 +33,21 @@
   .menu-links {
     list-style: none;
     display: flex;
-    gap: 15px;
+    gap: 0;
     margin: 0;
     padding: 0;
     align-items: center;
   }
 
   .menu-links li {
-    margin: 0;
-    padding: 0;
+    padding: 0 24px;
+    border-left: 1px solid #1C3144;
+    text-align: center;
+  }
+
+  .menu-links li:first-child {
+    border-left: none;
+    padding-left: 0;
   }
 
   .menu-links a {
@@ -66,16 +68,18 @@
 
     .menu-links {
       flex-direction: column;
-      gap: 10px;
-      margin-top: 10px;
     }
 
     .menu-links li {
+      border-left: none;
+      border-top: 1px solid #1C3144;
+      padding: 10px 0;
+      width: 100%;
       text-align: left;
     }
 
-    .menu-links li::before {
-      content: none;
+    .menu-links li:first-child {
+      border-top: none;
     }
   }
 </style>
