--- a/menu.html
+++ b/menu.html
@@ -22,9 +22,23 @@
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
     }
 
+    .logo-container {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      text-decoration: none;
+      color: #1C3144;
+    }
+
     .baltic-logo {
       height: 50px;
-      margin-right: 20px;
+    }
+
+    .logo-text {
+      font-weight: 700;
+      font-size: 1.5rem;
+      user-select: none;
+      margin: 0;
     }
 
     .menu-toggle {
@@ -99,8 +113,9 @@
 </head>
 <body>
   <nav class="baltic-menu">
-    <a href="https://balticsummit.pl/">
+    <a href="https://balticsummit.pl/" class="logo-container">
       <img src="https://storage.mlcdn.com/account_image/518224/LFKG7Y7KgPGPDUeZt9PFwlcplOkIxArUGstK30Di.png" alt="Baltic Summit logo" class="baltic-logo" />
+      <h1 class="logo-text">Baltic Summit 2025</h1>
     </a>
     <button class="menu-toggle" onclick="toggleMenu()">☰</button>
     <ul class="menu-links">
