--- a/menu.html
+++ b/menu.html
@@ -119,11 +119,11 @@
     </a>
     <button class="menu-toggle" onclick="toggleMenu()">☰</button>
     <ul class="menu-links">
-      <li><a href="https://balticsummit.pl/about2025">About</a></li>
+      <li><a href="https://balticsummit.pl/">About</a></li>
       <li><a href="https://balticsummit.pl/speakers2025">Speakers</a></li>
       <li><a href="https://balticsummit.pl/sessions2025">Workshops & Sessions</a></li>
       <li><a href="https://balticsummit.pl/sponsors2025">Sponsors & Partners</a></li>
-      <li><a href="https://balticsummit.pl/volunteers2025">Volunteers</a></li>
+      <li><a href="https://balticsummit.pl/">Volunteers</a></li>
     </ul>
   </nav>
 
