--- a/menu.html
+++ b/menu.html
@@ -22,9 +22,23 @@
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
     }
 
+    .logo-container {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      text-decoration: none;
+      color: #1C3144;
+    }
+
     .baltic-logo {
       height: 50px;
-      margin-right: 20px;
+    }
+
+    .logo-text {
+      font-weight: 700;
+      font-size: 1.5rem;
+      user-select: none;
+      margin: 0;
     }
 
     .menu-toggle {
@@ -95,41 +109,23 @@
         border-top: none;
       }
     }
-
-    /* Style for the MailerLite form container */
-    #volunteer-form-container {
-      display: none;
-      padding: 20px;
-      background: #f9f9f9;
-      border: 1px solid #ddd;
-      margin-top: 10px;
-      max-width: 600px;
-      margin-left: auto;
-      margin-right: auto;
-      font-size: 16px;
-      color: #1C3144;
-    }
   </style>
 </head>
 <body>
   <nav class="baltic-menu">
-    <a href="https://balticsummit.pl/">
+    <a href="https://balticsummit.pl/" class="logo-container">
       <img src="https://storage.mlcdn.com/account_image/518224/LFKG7Y7KgPGPDUeZt9PFwlcplOkIxArUGstK30Di.png" alt="Baltic Summit logo" class="baltic-logo" />
+      <h1 class="logo-text">Baltic Summit 2025</h1>
     </a>
     <button class="menu-toggle" onclick="toggleMenu()">☰</button>
     <ul class="menu-links">
-      <li><a href="https://balticsummit.pl/about2025">About</a></li>
+      <li><a href="https://balticsummit.pl/">About</a></li>
       <li><a href="https://balticsummit.pl/speakers2025">Speakers</a></li>
       <li><a href="https://balticsummit.pl/sessions2025">Workshops & Sessions</a></li>
       <li><a href="https://balticsummit.pl/sponsors2025">Sponsors & Partners</a></li>
-      <li><a href="#" id="volunteers-link">Volunteers</a></li>
+      <li><a href="https://dashboard.mailerlite.com/forms/518224/94575616198706627/share">Volunteers</a></li>
     </ul>
   </nav>
-
-  <!-- MailerLite form container, initially hidden -->
-  <div id="volunteer-form-container">
-    <div class="ml-embedded" data-form="xRIcZf"></div>
-  </div>
 
   <script>
     function toggleMenu() {
@@ -141,26 +137,6 @@
       const spacer = document.createElement('div');
       spacer.style.height = '90px';
       document.body.insertBefore(spacer, document.body.firstChild);
-    });
-
-    // MailerLite universal script loader
-    (function(w,d,e,u,f,l,n){
-      w[f]=w[f]||function(){(w[f].q=w[f].q||[]).push(arguments);},
-      l=d.createElement(e),l.async=1,l.src=u,
-      n=d.getElementsByTagName(e)[0],n.parentNode.insertBefore(l,n);
-    })(window,document,'script','https://assets.mailerlite.com/js/universal.js','ml');
-    ml('account', '518224');
-
-    // Toggle MailerLite form visibility on Volunteers menu click
-    document.getElementById('volunteers-link').addEventListener('click', function(e) {
-      e.preventDefault();
-      const formContainer = document.getElementById('volunteer-form-container');
-      if (formContainer.style.display === 'none' || !formContainer.style.display) {
-        formContainer.style.display = 'block';
-        formContainer.scrollIntoView({behavior: 'smooth'});
-      } else {
-        formContainer.style.display = 'none';
-      }
     });
   </script>
 </body>
