--- a/menu1.html
+++ b/menu1.html
@@ -9,17 +9,15 @@
       font-family: 'Inter', sans-serif;
     }
 
+    /* Fixed top bar */
     .baltic-menu {
       position: fixed;
       top: 0;
       left: 0;
       width: 100%;
-      z-index: 9999;
+      z-index: 1000;
       background-color: #ecfaff;
-      font-size: 22px;
-      color: #1C3144;
       display: flex;
-      flex-wrap: wrap;
       align-items: center;
       justify-content: space-between;
       padding: 16px 20px;
@@ -54,6 +52,14 @@
       cursor: pointer;
     }
 
+    .menu-dropdown {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0 20px;
+      margin-top: 90px; /* height of fixed bar + margin */
+    }
+
     .menu-container {
       display: flex;
       align-items: center;
@@ -63,16 +69,14 @@
     .menu-links {
       list-style: none;
       display: flex;
-      gap: 0;
       margin: 0;
       padding: 0;
-      align-items: center;
+      gap: 0;
     }
 
     .menu-links li {
       padding: 0 24px;
       border-left: 1px solid #1C3144;
-      text-align: center;
     }
 
     .menu-links li:first-child {
@@ -103,6 +107,7 @@
       background-color: #12212f;
     }
 
+    /* Mobile styles */
     @media (max-width: 768px) {
       .menu-toggle {
         display: block;
@@ -111,9 +116,9 @@
       .menu-container {
         display: none;
         flex-direction: column;
-        align-items: flex-start;
         width: 100%;
-        margin-top: 10px;
+        background-color: #ecfaff;
+        border-top: 1px solid #1C3144;
       }
 
       .menu-container.open {
@@ -123,15 +128,12 @@
       .menu-links {
         flex-direction: column;
         width: 100%;
-        background-color: #ecfaff;
       }
 
       .menu-links li {
         border-left: none;
         border-top: 1px solid #1C3144;
-        padding: 10px;
-        width: 100%;
-        text-align: left;
+        padding: 12px 20px;
       }
 
       .menu-links li:first-child {
@@ -139,18 +141,29 @@
       }
 
       .register-button {
-        margin: 10px 0 0 10px;
+        margin: 12px 20px;
+      }
+
+      .menu-dropdown {
+        flex-direction: column;
+        align-items: stretch;
+        margin-top: 90px;
       }
     }
   </style>
 </head>
 <body>
+  <!-- Fixed top menu bar -->
   <nav class="baltic-menu">
     <a href="https://balticsummit.pl/" class="logo-container">
       <img src="https://storage.mlcdn.com/account_image/518224/LFKG7Y7KgPGPDUeZt9PFwlcplOkIxArUGstK30Di.png" alt="Baltic Summit logo" class="baltic-logo" />
       <h1 class="logo-text">Baltic Summit 2025</h1>
     </a>
     <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+  </nav>
+
+  <!-- Menu shown under bar -->
+  <div class="menu-dropdown">
     <div class="menu-container" id="menuContainer">
       <ul class="menu-links">
         <li><a href="https://balticsummit.pl/">About</a></li>
@@ -161,19 +174,12 @@
       </ul>
       <a class="register-button" href="https://balticsummit.pl/tickets2025">Register</a>
     </div>
-  </nav>
+  </div>
 
   <script>
     function toggleMenu() {
       document.getElementById('menuContainer').classList.toggle('open');
     }
-
-    // Add top spacer to body
-    document.addEventListener('DOMContentLoaded', function () {
-      const spacer = document.createElement('div');
-      spacer.style.height = '90px';
-      document.body.insertBefore(spacer, document.body.firstChild);
-    });
   </script>
 </body>
 </html>
