--- a/menu.html
+++ b/menu.html
@@ -103,7 +103,7 @@
 
     @media (max-width: 768px) {
       .menu-toggle {
-        display: block;
+        display: none;
       }
 
       .menu-container {
