Added agenda and shop to menu.html

--- a/menu.html
+++ b/menu.html
@@ -154,6 +154,8 @@
         <li><a href="https://balticsummit.pl/">About</a></li>
         <li><a href="https://balticsummit.pl/speakers2025">Speakers</a></li>
         <li><a href="https://balticsummit.pl/sessions2025">Workshops & Sessions</a></li>
+        <li><a href="https://balticsummit.pl/agenda">Agenda</a></li>
+        <li><a href="https://balticsummit.pl/shop">Shop</a></li>
         <li><a href="https://balticsummit.pl/sponsors2025">Sponsors & Partners</a></li>
         <li><a href="https://dashboard.mailerlite.com/forms/518224/94575616198706627/share">Volunteers</a></li>
       </ul>
